--- a/doc/interfaces/IERC1404.md
+++ b/doc/interfaces/IERC1404.md
@@ -1,4 +1,4 @@
-# IEIP1404
+# IERC1404
 
 [TOC]
 
@@ -7,7 +7,7 @@
 The transfer of token from an address to another address is restricted by using the EIP-1404, *Simple Restricted Token Standard* 
 See [ethereum/EIPs/issues/1404](https://github.com/ethereum/EIPs/issues/1404), [erc1404.org/](https://erc1404.org/).
 
-In the interface IEIP1404Wrapper, we have added one function to the standard : `isTransferValid`
+In the interface IERC1404Wrapper, we have added one function to the standard : `isTransferValid`
 
 To apply transfer restriction, you need to deploy a CMTAT containing the module `ValidationModule`, as well as a contract implementing the interface *IEIP1404Wrapper*, which we usually call a *RuleEngine*.
 
@@ -18,13 +18,11 @@ You will find an example of this kind of architecture in [](../../contracts/mock
 ## UML
 The following UML describes the different interfaces and their function.
 
-![IEIP1404](./schema/sol2uml/IEIP1404.svg)
+![IEIP1404](./schema/sol2uml/IERC1404.svg)
 
 
 
 ## Sūrya's Description Report
-
-### IEIP1404
 
 ### Legend
 
@@ -33,12 +31,14 @@ The following UML describes the different interfaces and their function.
 |   🛑    | Function can modify state |
 |   💵    | Function is payable       |
 
+### IERC1404
+
 #### Files Description Table
 
 
-| File Name                          | SHA-1 Hash                               |
-| ---------------------------------- | ---------------------------------------- |
-| ./interfaces/IEIP1404/IEIP1404.sol | 61b9ba3ee5e6c8ffbb95a590419fb21df9d93a95 |
+| File Name                                      | SHA-1 Hash                               |
+| ---------------------------------------------- | ---------------------------------------- |
+| ./interfaces/draft-IERC1404/draft-IERC1404.sol | 273e3d0369a8840f4f4a88898bf57bf854729dcc |
 
 
 #### Contracts Description Table
@@ -48,18 +48,18 @@ The following UML describes the different interfaces and their function.
 | :----------: | :---------------------------: | :------------: | :------------: | :-----------: |
 |      └       |       **Function Name**       | **Visibility** | **Mutability** | **Modifiers** |
 |              |                               |                |                |               |
-| **IEIP1404** |           Interface           |                |                |               |
+| **IERC1404** |           Interface           |                |                |               |
 |      └       |   detectTransferRestriction   |   External ❗️   |                |      NO❗️      |
 |      └       | messageForTransferRestriction |   External ❗️   |                |      NO❗️      |
 
-### IEIP1404Wrapper
+### IERC1404Wrapper
 
 #### Files Description Table
 
 
-| File Name                                 | SHA-1 Hash                               |
-| ----------------------------------------- | ---------------------------------------- |
-| ./interfaces/IEIP1404/IEIP1404Wrapper.sol | e3658a9af344df6e49f304c90b7315422b77357d |
+| File Name                                             | SHA-1 Hash                               |
+| ----------------------------------------------------- | ---------------------------------------- |
+| ./interfaces/draft-IERC1404/draft-IERC1404Wrapper.sol | 72e3b540e88fa503b11c92bcbc633e6dbed917a4 |
 
 
 #### Contracts Description Table
@@ -69,6 +69,5 @@ The following UML describes the different interfaces and their function.
 | :-----------------: | :---------------: | :------------: | :------------: | :-----------: |
 |          └          | **Function Name** | **Visibility** | **Mutability** | **Modifiers** |
 |                     |                   |                |                |               |
-| **IEIP1404Wrapper** |     Interface     |    IEIP1404    |                |               |
+| **IERC1404Wrapper** |     Interface     |    IERC1404    |                |               |
 |          └          | validateTransfer  |   External ❗️   |                |      NO❗️      |
-
