--- a/doc/audits/tools/aderyn/v3.0.0-aderyn-report.md
+++ b/doc/audits/tools/aderyn/v3.0.0-aderyn-report.md
@@ -474,7 +474,12 @@ ERC20 functions may not behave as expected. For example: return values are not a
 
 ## L-3: Unspecific Solidity Pragma
 
-> Since CMTAT is more like a library to use, the version is set in the config file to allow the user to decide which version used.
+> One potential use of CMTAT is to be used as a library, similar to OpenZeppelin library.
+>
+> In this sense, we use the same convention of OpenZeppelin which for the moment only imposes that the version is higher than 0.8.20: 
+> pragma solidity ^0.8.20;
+>
+> A fixed version is set in the config file (0.8.30). Users are free to use these or conduct their own research before switching to another.
 
 Consider using a specific version of Solidity in your contracts instead of a wide version. For example, instead of `pragma solidity ^0.8.0;`, use `pragma solidity 0.8.0;`
 
